--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,70 @@
              xmlns:local="clr-namespace:MedicalLaboratoryNumber20App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Brush x:Key="MainBackground">#FFFFFF</Brush>
+        <Brush x:Key="AdditionalBackground">#76E383</Brush>
+        <Brush x:Key="AttentionColor">#498C51</Brush>
+        <Style TargetType="Window"
+               x:Key="WindowStyle">
+            <Setter Property="FontFamily"
+                    Value="Comic Sans MS" />
+            <Setter Property="Icon"
+                    Value="Resources/logo.ico" />
+        </Style>
+        <Style x:Key="CommonBlock"
+               TargetType="TextBlock">
+            <Setter Property="Margin"
+                    Value="5" />
+            <Setter Property="Width"
+                    Value="200" />
+            <Setter Property="Height"
+                    Value="20" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Margin"
+                    Value="5" />
+            <Setter Property="Width"
+                    Value="200" />
+            <Setter Property="Height"
+                    Value="20" />
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Margin"
+                    Value="5" />
+            <Setter Property="Width"
+                    Value="200" />
+            <Setter Property="Height"
+                    Value="20" />
+            <Setter Property="Background"
+                    Value="{StaticResource AttentionColor}" />
+        </Style>
+        <Style TargetType="ComboBox">
+            <Setter Property="Margin"
+                    Value="5" />
+            <Setter Property="Width"
+                    Value="200" />
+            <Setter Property="Height"
+                    Value="20" />
+        </Style>
+        <Style TargetType="Image">
+            <Setter Property="Margin"
+                    Value="5" />
+        </Style>
+        <Style TargetType="DatePicker">
+            <Setter Property="Margin"
+                    Value="5" />
+        </Style>
+        <Style TargetType="DataGrid">
+            <Setter Property="Margin"
+                    Value="5" />
+        </Style>
+        <Style TargetType="ListView">
+            <Setter Property="Margin"
+                    Value="5" />
+        </Style>
+        <Style TargetType="CheckBox">
+            <Setter Property="Margin"
+                    Value="5" />
+        </Style>
     </Application.Resources>
 </Application>
