--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MedicalLaboratoryNumber20App"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" 
+        Height="450" 
+        Width="800"
+        Style="{StaticResource WindowStyle}">
     <Grid>
-        
     </Grid>
 </Window>
