--- a/App.xaml
+++ b/App.xaml
@@ -2,11 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MedicalLaboratoryNumber20App"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/Windows/NavigationWindow.xaml">
     <Application.Resources>
         <Brush x:Key="MainBackground">#FFFFFF</Brush>
         <Brush x:Key="AdditionalBackground">#76E383</Brush>
         <Brush x:Key="AttentionColor">#498C51</Brush>
+        <DropShadowBitmapEffect x:Key="ShadowEffect"
+                                Softness=".2"
+                                ShadowDepth="1"
+                                Opacity=".5"></DropShadowBitmapEffect>
         <Style TargetType="Window"
                x:Key="WindowStyle">
             <Setter Property="FontFamily"
