--- a/Views/Windows/NavigationWindow.xaml
+++ b/Views/Windows/NavigationWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MedicalLaboratoryNumber20App"
         mc:Ignorable="d"
-        Title="MainWindow" 
-        Height="450" 
+        Title="{Binding CurrentTitle}"
+        Height="450"
         Width="800"
         Style="{StaticResource WindowStyle}">
     <Grid>
@@ -16,8 +16,17 @@
             <RowDefinition Height="60" />
         </Grid.RowDefinitions>
         <Grid BitmapEffect="{StaticResource ShadowEffect}"
-              Background="{StaticResource AdditionalBackground}"></Grid>
-        <Frame Grid.Row="1"></Frame>
+              Background="{StaticResource AdditionalBackground}">
+            <Image Source="/MedicalLaboratoryNumber20App;component/Resources/logo.png"
+                   HorizontalAlignment="Left"
+                   Stretch="Uniform"></Image>
+            <TextBlock Text="{Binding CurrentTitle}"
+                       FontSize="25"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"></TextBlock>
+        </Grid>
+        <Frame Grid.Row="1"
+               Name="MainFrame"></Frame>
         <Grid BitmapEffect="{StaticResource ShadowEffect}"
               Background="{StaticResource AdditionalBackground}"
               Grid.Row="2"></Grid>
