--- a/Views/Windows/NavigationWindow.xaml
+++ b/Views/Windows/NavigationWindow.xaml
@@ -8,6 +8,9 @@
         Title="{Binding CurrentTitle}"
         Height="450"
         Width="800"
+        MinHeight="450"
+        MinWidth="800"
+        WindowStartupLocation="CenterScreen"
         Style="{StaticResource WindowStyle}">
     <Grid>
         <Grid.RowDefinitions>
