--- a/App.xaml
+++ b/App.xaml
@@ -53,6 +53,14 @@
             <Setter Property="Height"
                     Value="20" />
         </Style>
+        <Style TargetType="PasswordBox">
+            <Setter Property="Margin"
+                    Value="5" />
+            <Setter Property="Width"
+                    Value="200" />
+            <Setter Property="Height"
+                    Value="20" />
+        </Style>
         <Style TargetType="Button">
             <Setter Property="Margin"
                     Value="5" />
