--- a/Views/Pages/AdminPages/AdminPage.xaml
+++ b/Views/Pages/AdminPages/AdminPage.xaml
@@ -1,14 +1,47 @@
 ﻿<Page x:Class="MedicalLaboratoryNumber20App.Views.Pages.AdminPages.AdminPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:MedicalLaboratoryNumber20App.Views.Pages.AdminPages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="AdminPage">
-
+      mc:Ignorable="d"
+      d:DesignHeight="450"
+      d:DesignWidth="800"
+      Title="Страница админа">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60" />
+            <RowDefinition Height="3*" />
+        </Grid.RowDefinitions>
+        <Grid Background="{StaticResource AdditionalBackground}"
+              BitmapEffect="{StaticResource ShadowEffect}">
+            <WrapPanel Orientation="Horizontal">
+                <Image>
+                    <Image.Source>
+                        <Binding Path="User.UserImage">
+                            <Binding.TargetNullValue>
+                                <ImageSource>
+                                    /Resources/logo.png
+                                </ImageSource>
+                            </Binding.TargetNullValue>
+                        </Binding>
+                    </Image.Source>
+                </Image>
+                <StackPanel VerticalAlignment="Center">
+                    <TextBlock Text="{Binding User.UserName, StringFormat=Фамилия и имя: {0}}"></TextBlock>
+                    <TextBlock Text="{Binding User.UserType.UserTypeName, StringFormat=Роль: {0}}"></TextBlock>
+                </StackPanel>
+            </WrapPanel>
+        </Grid>
+        <StackPanel Grid.Row="1"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+            <Button Content="Cформировать отчеты"
+                    Width="auto"></Button>
+            <Button Content="История входа"
+                    Width="auto"></Button>
+            <Button Content="Данные о расходных материалах"
+                    Width="auto"></Button>
+        </StackPanel>
     </Grid>
 </Page>
