--- a/Views/Pages/AccountantPages/AccountantPage.xaml
+++ b/Views/Pages/AccountantPages/AccountantPage.xaml
@@ -4,19 +4,12 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:MedicalLaboratoryNumber20App.Views.Pages.AccountantPages"
-      xmlns:usercontrols="clr-namespace:MedicalLaboratoryNumber20App.UserControls"
       mc:Ignorable="d"
       d:DesignHeight="450"
       d:DesignWidth="800"
       Title="Страница бухгалтера">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
-            <RowDefinition Height="3*" />
-        </Grid.RowDefinitions>
-        <usercontrols:UserHeader DataContext="{Binding User, Source={x:Static Application.Current}}"></usercontrols:UserHeader>
-        <StackPanel Grid.Row="1"
-                    HorizontalAlignment="Center"
+        <StackPanel HorizontalAlignment="Center"
                     VerticalAlignment="Center">
             <Button Content="Просмотреть отчёты"
                     Width="auto"
