--- a/App.xaml
+++ b/App.xaml
@@ -104,6 +104,10 @@
         <Style TargetType="DataGrid">
             <Setter Property="Margin"
                     Value="5" />
+            <Setter Property="AutoGenerateColumns"
+                    Value="False" />
+            <Setter Property="IsReadOnly"
+                    Value="True" />
         </Style>
         <Style TargetType="ListView">
             <Setter Property="Margin"
