Move session information to NavigationWindow

--- a/Views/Windows/NavigationWindow.xaml
+++ b/Views/Windows/NavigationWindow.xaml
@@ -83,6 +83,16 @@
                     </Style.Triggers>
                 </Style>
             </Grid.Style>
+            <TextBlock HorizontalAlignment="Right"
+                       VerticalAlignment="Bottom"
+                       Width="auto"
+                       Style="{StaticResource CommonBlock}">
+                <TextBlock.Inlines>
+                    <Run Text="Сессия завершится через"></Run>
+                    <Run Text="{Binding TimerService.TimeLeft, Source={x:Static Application.Current}, StringFormat=hh\\:mm, Mode=OneWay}"></Run>
+                    <Run Text="(часы:минуты)"></Run>
+                </TextBlock.Inlines>
+            </TextBlock>
             <WrapPanel Orientation="Horizontal">
                 <Image>
                     <Image.Source>
