--- a/App.xaml
+++ b/App.xaml
@@ -100,6 +100,8 @@
         <Style TargetType="DatePicker">
             <Setter Property="Margin"
                     Value="5" />
+            <Setter Property="Width"
+                    Value="200" />
         </Style>
         <Style TargetType="DataGrid">
             <Setter Property="Margin"
