Prevent double login by a click on the password checkbox

--- a/Views/Pages/LoginPage.xaml
+++ b/Views/Pages/LoginPage.xaml
@@ -32,6 +32,7 @@
                 </Grid>
             </StackPanel>
             <CheckBox Content="Показать пароль"
+                      x:Name="ShowPasswordBox"
                       HorizontalAlignment="Right"
                       Checked="PerformVisiblePassword"
                       Unchecked="PerformHiddenPassword"
